deploy/examples/kind/patches/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: origod
$patch: delete
